@@ -2516,6 +2516,11 @@ the one that is currently running Ant.</p>
       fork is disabled)</td>
     <td align="center" valign="top">No</td>
   </tr>
+  <tr>
+    <td valign="top">output</td>
+    <td valign="top">Name of a file to write the output to.</td>
+    <td align="center" valign="top">No</td>
+  </tr>
 </table>
 <h3>Parameters specified as nested elements</h3>
 <h4>arg and jvmarg</h4>
