@@ -64,16 +64,19 @@ import org.apache.tools.ant.types.Path;
 
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.io.*;
 
 /*
  *
  * @author thomas.haas@softwired-inc.com
+ * @author <a href="mailto:stefan.bodewig@epost.de">Stefan Bodewig</a>
  */
 public class ExecuteJava {
 
     private Commandline javaCommand = null;
     private Path classpath = null;
     private CommandlineJava.SysProperties sysProperties = null;
+    private PrintStream out;
 
     public void setJavaCommand(Commandline javaCommand) {
         this.javaCommand = javaCommand;
@@ -87,12 +90,28 @@ public class ExecuteJava {
         sysProperties = s;
     }
 
+    /**
+     * All output (System.out as well as System.err) will be written
+     * to this Stream.
+     */
+    public void setOutput(PrintStream out) {
+        this.out = out;
+    }
+
     public void execute(Project project) throws BuildException{
+        PrintStream sOut = System.out;
+        PrintStream sErr = System.err;
+
         final String classname = javaCommand.getExecutable();
         final Object[] argument = { javaCommand.getArguments() };
         try {
             if (sysProperties != null) {
                 sysProperties.setSystem();
+            }
+
+            if (out != null) {
+                System.setErr(out);
+                System.setOut(out);
             }
 
             final Class[] param = { Class.forName("[Ljava.lang.String;") };
@@ -122,6 +141,11 @@ public class ExecuteJava {
         } finally {
             if (sysProperties != null) {
                 sysProperties.restoreSystem();
+            }
+            if (out != null) {
+                System.setOut(sOut);
+                System.setErr(sErr);
+                out.close();
             }
         }
     }
